update mongorestore for large documents SERVER-2575